--- a/index.html
+++ b/index.html
@@ -1,111 +1,109 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Penalty Game</title>
-  <style>
+<meta charset="UTF-8">
+<title>Penalty Signals</title>
+<style>
     body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background: #0d0d1a;
-      color: white;
-      font-family: Arial, sans-serif;
+        background: #0d0d1a;
+        color: white;
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
     }
-    button {
-      padding: 12px 25px;
-      background: #ff4b2b;
-      border: none;
-      color: #fff;
-      font-size: 18px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-bottom: 20px;
+    .field {
+        position: relative;
+        width: 400px;
+        height: 250px;
+        background: #2e7d32;
+        border: 5px solid white;
+        border-radius: 8px;
+        overflow: hidden;
     }
     .goal {
-      position: relative;
-      width: 400px;
-      height: 250px;
-      border: 5px solid #fff;
-      border-radius: 8px;
-      background: #2e2e2e;
-      overflow: hidden;
-    }
-    .ball {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      width: 30px;
-      height: 30px;
-      background: white;
-      border-radius: 50%;
-      box-shadow: 0 0 10px #fff;
-      transform: translateX(-50%);
-      display: none;
+        position: absolute;
+        top: 20px;
+        left: 100px;
+        width: 200px;
+        height: 100px;
+        border: 5px solid white;
+        background: rgba(255,255,255,0.1);
     }
     .goalkeeper {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      width: 60px;
-      height: 100px;
-      background: #00bfff;
-      border-radius: 10px;
-      transform: translateX(-50%);
+        position: absolute;
+        bottom: 50px;
+        left: 180px;
+        width: 40px;
+        height: 60px;
+        background: blue;
+        border-radius: 8px;
+        transition: all 0.6s ease;
     }
-    /* Анимация мяча */
-    @keyframes shoot {
-      0% { bottom: 0; left: 50%; }
-      100% { bottom: 180px; left: var(--target-x); }
+    .ball {
+        position: absolute;
+        bottom: 10px;
+        left: 190px;
+        width: 20px;
+        height: 20px;
+        background: white;
+        border-radius: 50%;
+        transition: all 1s ease;
     }
-    /* Анимация вратаря */
-    @keyframes dive {
-      0% { transform: translateX(-50%) translateY(0); }
-      100% { transform: translateX(var(--dive-x)) translateY(-50px); }
+    button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        background: #ff4b2b;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        font-size: 1rem;
+        cursor: pointer;
     }
-  </style>
+</style>
 </head>
 <body>
+    <div class="field">
+        <div class="goal"></div>
+        <div class="goalkeeper" id="goalkeeper"></div>
+        <div class="ball" id="ball"></div>
+    </div>
+    <button onclick="shoot()">Получить сигнал</button>
 
-  <button onclick="shoot()">Получить сигнал</button>
-  <div class="goal" id="goal">
-    <div class="goalkeeper" id="keeper"></div>
-    <div class="ball" id="ball"></div>
-  </div>
+<script>
+function shoot() {
+    const ball = document.getElementById("ball");
+    const keeper = document.getElementById("goalkeeper");
 
-  <script>
-    function shoot() {
-      const ball = document.getElementById("ball");
-      const keeper = document.getElementById("keeper");
+    // Сбрасываем позиции
+    ball.style.left = "190px";
+    ball.style.bottom = "10px";
+    keeper.style.left = "180px";
+    
+    // Анимация вратаря (он прыгает, но мяч всё равно влетает)
+    setTimeout(() => {
+        let jumpSide = Math.random() > 0.5 ? -80 : 80;
+        keeper.style.left = (180 + jumpSide) + "px";
+    }, 200);
 
-      // Показываем мяч
-      ball.style.display = "block";
+    // Анимация мяча (летит в ворота, всегда гол)
+    setTimeout(() => {
+        let targetX = 120 + Math.random() * 140; // случайная точка в воротах
+        let targetY = 100 + Math.random() * 20;
+        ball.style.left = targetX + "px";
+        ball.style.bottom = targetY + "px";
+    }, 100);
 
-      // Случайная цель удара
-      const targets = ["20%", "50%", "80%"];
-      const targetX = targets[Math.floor(Math.random() * targets.length)];
-
-      // Задаём CSS переменные
-      ball.style.setProperty("--target-x", targetX);
-
-      // Запускаем анимацию мяча
-      ball.style.animation = "none";
-      ball.offsetHeight; // перезапуск анимации
-      ball.style.animation = "shoot 1s forwards";
-
-      // Вратарь прыгает в сторону, но мяч всегда залетает
-      const diveDirections = ["-150px", "150px"];
-      const diveX = diveDirections[Math.floor(Math.random() * diveDirections.length)];
-      keeper.style.setProperty("--dive-x", diveX);
-
-      keeper.style.animation = "none";
-      keeper.offsetHeight;
-      keeper.style.animation = "dive 1s forwards";
-    }
-  </script>
-
+    // Возврат мяча обратно
+    setTimeout(() => {
+        ball.style.left = "190px";
+        ball.style.bottom = "10px";
+        keeper.style.left = "180px";
+    }, 2000);
+}
+</script>
 </body>
 </html>
 
